# roe

./: .gitignore  CMakeLists.txt  README.md  cmake-variants.yaml
roe/: CMakeLists.txt
roe/include/: dialogs.h  document.h  editor.h  roe.h  tabwidget.h  window.h
roe/include/base/: document_base.h
roe/qml/: main.qml
roe/src/: dialogs.cc  document.cc  editor.cc  main.cc  roe.cc  tabwidget.cc  window.cc
